Bug 1187410 - Use GetNameShared() in XPCNativeInterface::NewInstance() to avoid a leak. r=mrbkap

GetName() returns a new string, but that string is never freed.

This patch avoids the leak by not copying the string. This is okay because
the scope of intfNameChars is within the scope of aInfo.